--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-webhookUrl=<optional>
-WEBHOOK_AUTH=<optional>
-HELPER_ACT=<username of userbot>
-HELPER_ACT_ID=<user if of userbot>
-BOT_ID=<user id of bot>
-LOG_INSIGHT_KEY=<optional>
-LOG_INSIGHT_REGION=<optional>
-BOT_TOKEN=<mandatory>
-API_ID=<mandatory>
-MONGO_URL=<mandatory>
-API_HASH=<mandatory>
-USERBOT_SESSION=<mandatory>
+webhookUrl=
+WEBHOOK_AUTH=
+HELPER_ACT=
+HELPER_ACT_ID=
+BOT_ID=
+LOG_INSIGHT_KEY=
+LOG_INSIGHT_REGION=
+BOT_TOKEN=
+API_ID=
+MONGO_URL=
+API_HASH=
+USERBOT_SESSION=
